refactor($Referee): 메서드 간결화
기존 collect 메서드 대신 toList 메서드로 코드 간결화